--- a/src/main/webapp/resources/scaffold/pageTemplate.xhtml
+++ b/src/main/webapp/resources/scaffold/pageTemplate.xhtml
@@ -38,6 +38,12 @@
 				<li>
 					<h:link outcome="/role/search" value="Role"/>
 				</li>
+				<li>
+					<h:link outcome="/user/search" value="User"/>
+				</li>
+				<li>
+					<h:link outcome="/userRole/search" value="User Role"/>
+				</li>
 			</ul>
 		</div>
 
